qlc/cpp/ql.h

  QlAssetSwap* DLLEXPORT qlAssetSwap1(int parAssetSwap, QlBond* bond, double bondCleanPrice, double nonParRepayment, double gearing, QlIborIndex* iborIndex, double spread, DayCounter* floatingDayCount, int dealMaturity, int payBondCoupon, char **e);
  QlAssetSwap* DLLEXPORT qlAssetSwap(int payBondCoupon, QlBond* bond, double bondCleanPrice, QlIborIndex* iborIndex, double spread, Schedule* floatSchedule, DayCounter* floatingDayCount, int parAssetSwap, char **e);
  Leg* DLLEXPORT qlAssetSwapBondLeg(QlAssetSwap* o, char **e);
  Leg* DLLEXPORT qlAssetSwapFloatingLeg(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapCleanPrice(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapFairCleanPrice(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapFairNonParRepayment(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapFairSpread(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapFloatingLegBPS(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapFloatingLegNPV(QlAssetSwap* o, char **e);
  double DLLEXPORT qlAssetSwapNonParRepayment(QlAssetSwap* o, char **e);
  int DLLEXPORT qlAssetSwapParSwap(QlAssetSwap* o, char **e);
  int DLLEXPORT qlAssetSwapPayBondCoupon(QlAssetSwap* o, char **e);